syntax = "proto3";
package cognitive.v1;

message Tag { string key = 1; string value = 2; }

message SubmitTaskRequest {
  string task_type = 1;
  bytes payload = 2;
  repeated Tag tags = 3;
}
message SubmitTaskResponse { string workflow_id = 1; }

message GetTaskResultRequest { string workflow_id = 1; }
message TaskResult { string status = 1; bytes data = 2; string error = 3; }

message TaskEventsRequest { string workflow_id = 1; }
message TaskEvent { string at = 1; string phase = 2; string note = 3; }

service TaskService {
  rpc SubmitTask(SubmitTaskRequest) returns (SubmitTaskResponse);
  rpc GetTaskResult(GetTaskResultRequest) returns (TaskResult);
  rpc StreamTaskEvents(TaskEventsRequest) returns (stream TaskEvent);
}
